kylin-recorder (1.2.23kord~rc19) v101; urgency=medium

  * 修改界面名字为录音
  * 需求号：无
  * 其他改动说明：无

 -- zoujunnan <zoujunnan@kylinos.cn>  Fri, 16 Apr 2021 12:05:00 +0800

kylin-recorder (1.2.23kord~rc18) v101; urgency=medium

  * 修复bug47300：设置格式为wav时，保存录音文件时，没有转码的过程 
  * 修复bug47200：打开麒麟录音，接入耳麦后，应用卡死
  * 修复bug47260：录音文件另存为时，打开文件位置仍是默认路径
  * 修复bug47259：录音文件另存为时，输入文件名称没有做判空验证
  * 修复bug47209：右侧文件播放列表，点击音频资料播放时，建议有一个播放的效果
  * 修复bug47283：从默认路径下删除录音文件后，再次点击录音，文件列表未显示
  * 修复bug47223：录音文件另存为时，不要默认改变文件的名称和格式
  * 修复bug48487：录音格式保存为wav，变声
  * 修复bug47215：将音频文件另存为时，弹框位置没有居中
  * 修复bug47397：没有对另存为弹窗做模态处理，且另存为弹窗打开时，任务栏有两个麒麟录音任务图标
  * 修复bug47393：对文件列表区域文件进行另存为时，另存为弹窗选择文件类型后，名称后缀不能自动跟随变化
  * 修复bug47263：录音文件格式为wav时，打开文件失败
  * 需求号：无
  * 其他改动说明：无

 -- zoujunnan <zoujunnan@kylinos.cn>  Thu, 15 Apr 2021 14:43:00 +0800

kylin-recorder (1.2.23kord~rc17) v101; urgency=high

  * 修复bug44130：点击开始录音，等待系统自动关闭，重复多次测试，发现应用录音的时长不一致
  * 修复bug41447：点击开始录音后，大概卡顿两秒后才开始录音
  * 修复bug34915：在麒麟录音界面删除的录音文件，不会进入回收站，而是直接被删除了
  * 修复bug41602：在录音时，点击音量进度条调节音量时，鼠标点击热区问题
  * 修复bug41596：在录音时，建议点击音量图标可以进行静音操作

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 18 Mar 2021 16:22:00 +0800

kylin-recorder (1.2.23kord~rc16) v101; urgency=high

  * 修复bug43240：用户手册内容与麒麟录音实际情况不符
  * 修复bug41447：点击开始录音后，大概卡顿两秒后才开始录音

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 18 Mar 2021 16:22:00 +0800

kylin-recorder (1.2.23kord~rc15) v101; urgency=high

  * 修复bug42578：点击迷你模式后点击还原，窗口是最小化在任务栏，不是还原到正常窗口
  * 修复bug32962：点击“迷你”后再点击“还原”按钮，概率性出现最小化到任务栏

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 17 Mar 2021 16:13:00 +0800

kylin-recorder (1.2.23kord~rc14) v101; urgency=high

  * 修复bug42481：关于中没有软件功能的描述

 -- baijincheng <baijincheng@kylinos.cn>  Tue, 16 Mar 2021 21:54:00 +0800

kylin-recorder (1.2.23kord~rc13) v101; urgency=high

  * 修复bug42881：改变系统字号，文件列表时长跟随变化了，但功能菜单下拉列表没有跟随变化
  * 修复bug42574：根据用户手册，设置中缺少m4a格式
  * 修复bug41587：多个录音文件，连续删除时，删除1-2个文件后会有一个1~3s的卡顿
  * 修复bug36574：连接蓝牙耳机无法录制音频
