@@ -1,3 +1,11 @@
+kylin-recorder (1.2.23kord~rc20) v101; urgency=medium
+
+  * 修复bug49256：录音 - 打开窗体未置顶显示
+  * 需求号：无
+  * 其他改动说明：无
+
+ -- zoujunnan <zoujunnan@kylinos.cn>  Tue, 17 Apr 2021 12:05:00 +0800
+
 kylin-recorder (1.2.23kord~rc19) v101; urgency=medium
 
   * 修改界面名字为录音
